; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_antic.c_ANTIC_UpdateScanlinePrior.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_antic.c_ANTIC_UpdateScanlinePrior.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ANTIC_cpu2antic_ptr = common dso_local global i32* null, align 8
@ANTIC_xpos = common dso_local global i64 0, align 8
@ANTIC_cur_screen_pos = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ANTIC_UpdateScanlinePrior(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %6 = load i32*, i32** @ANTIC_cpu2antic_ptr, align 8
  %7 = load i64, i64* @ANTIC_xpos, align 8
  %8 = getelementptr inbounds i32, i32* %6, i64 %7
  %9 = load i32, i32* %8, align 4
  store i32 %9, i32* %3, align 4
  store i32 2, i32* %4, align 4
  %10 = load i32, i32* %3, align 4
  %11 = mul nsw i32 %10, 2
  %12 = sub nsw i32 %11, 37
  %13 = load i32, i32* %4, align 4
  %14 = add nsw i32 %12, %13
  store i32 %14, i32* %5, align 4
  %15 = load i32, i32* @ANTIC_cur_screen_pos, align 4
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @draw_partial_scanline(i32 %15, i32 %16)
  %18 = load i32, i32* %5, align 4
  store i32 %18, i32* @ANTIC_cur_screen_pos, align 4
  ret void
}

declare dso_local i32 @draw_partial_scanline(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
